--- a/.github/workflows/ewpratten-com.yml
+++ b/.github/workflows/ewpratten-com.yml
@@ -13,6 +13,9 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+    environment: production
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
@@ -24,3 +27,13 @@ jobs:
         run: |
           cd sites/ewpratten.com
           /tmp/zola build
+      - name: Deploy
+        uses: cloudflare/pages-action@v1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          projectName: "ewpratten"
+          workingDirectory: "sites/ewpratten.com"
+          directory: "public"
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
