Add deployments permissions

--- a/.github/workflows/ewpratten-com.yml
+++ b/.github/workflows/ewpratten-com.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      deployments: write
     environment: production
     steps:
       - name: Git checkout
