--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,8 @@
             "args": [
                 "serve",
                 "--drafts",
+                "--interface",
+                "0.0.0.0",
                 "--open"
             ],
             "problemMatcher": []
