--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,8 @@
             "command": "zola",
             "args": [
                 "serve",
+                "--interface",
+                "0.0.0.0",
                 "--open"
             ],
             "problemMatcher": []
