load profile photos

--- a/config.toml
+++ b/config.toml
@@ -27,7 +27,7 @@ domain_name = "ewpratten.com"
 # Me
 name = "Evan Pratten"
 profession = "Software Developer"
-profile_photo = "https://branding.ewpratten.com/pfp/2022/460x460.webp"
+profile_photo = "/images/pfp/2022/460x460.webp"
 # Accounts
 email = "evan@ewpratten.com"
 github = "ewpratten"
