--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
-    "wrangler": "^3.50.0"
+    "wrangler": "2.21.1"
+  },
+  "scripts": {
+    "wrangler": "wrangler"
   }
 }
