--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,8 @@ description = "Evan Pratten is a software developer, amateur radio operator, and
 default_language = "en"
 compile_sass = true
 build_search_index = true
-generate_feed = true
-feed_filename = "rss.xml"
+generate_feeds = true
+feed_filenames = ["rss.xml"]
 minify_html = false # This breaks mermaid diagrams :(
 ignored_content = ["content/@/blog/*.md"]
 ignored_static = ["static/images/drawings/*/*.xcf"]
