--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,11 +9,10 @@ ZOLA_VERSION = "0.15.3"
 
 [env.production]
 compatibility_date = "2023-05-22"
+r2_buckets = [
+    { binding = "MC_MODPACK_BUCKET", bucket_name = "minecraft-modpack-builds" }
+]
 
 [env.production.vars]
 GOAT_COUNTER_SITE_CODE = "ewpratten"
 ZOLA_VERSION = "0.15.3"
-
-[[r2_buckets]]
-binding = "MC_MODPACK_BUCKET"
-bucket_name = "minecraft-modpack-builds"
