--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,38 +4,18 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Launch development webserver",
+            "label": "Launch development webserver (ewpratten.com)",
             "type": "shell",
             "command": "zola",
+            "options": {
+                "cwd": "${workspaceFolder}/ewpratten.com"
+            },
             "args": [
                 "serve",
                 "--drafts",
                 "--interface",
                 "0.0.0.0",
                 "--open"
-            ],
-            "problemMatcher": []
-        },
-        {
-            "label": "Launch development webserver (without drafts)",
-            "type": "shell",
-            "command": "zola",
-            "args": [
-                "serve",
-                "--interface",
-                "0.0.0.0",
-                "--open"
-            ],
-            "problemMatcher": []
-        },
-        {
-            "label": "Initialize Python venv",
-            "type": "shell",
-            "command": "python3",
-            "args": [
-                "-m",
-                "venv",
-                ".venv"
             ],
             "problemMatcher": []
         }
