clean up existing unused files

--- a/.github/workflows/ewpratten-com-deploy.yml
+++ b/.github/workflows/ewpratten-com-deploy.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Build only 
         uses: shalzz/zola-deploy-action@v0.19.1
         env:
+          BUILD_DIR: sites/ewpratten.com
           BUILD_ONLY: true
           BUILD_FLAGS: --drafts
 
@@ -46,6 +47,7 @@ jobs:
       - name: Build only 
         uses: shalzz/zola-deploy-action@v0.19.1
         env:
+          BUILD_DIR: sites/ewpratten.com
           BUILD_ONLY: true
 
       - name: Publish to Cloudflare Pages
@@ -54,6 +56,6 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: ewpratten
-          directory: public
+          directory: sites/ewpratten.com/public
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
           wranglerVersion: '2'
