--- a/.github/workflows/ewpratten-com.yml
+++ b/.github/workflows/ewpratten-com.yml
@@ -2,6 +2,9 @@ name: Deploy ewpratten.com
 
 on:
   push:
+    paths:
+      - '.github/workflows/ewpratten-com.yml'
+      - 'sites/ewpratten.com/**'
 
 jobs:
 
