Revert "clean up existing unused files"
This reverts commit ee4b001300e24509dc6978771002a49225fd76ef.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,7 +8,7 @@
             "type": "shell",
             "command": "zola",
             "options": {
-                "cwd": "${workspaceFolder}/sites/ewpratten.com"
+                "cwd": "${workspaceFolder}"
             },
             "args": [
                 "serve",
