Make sure CI checks itself

--- a/.github/workflows/deploy-cursed-graphics.yml
+++ b/.github/workflows/deploy-cursed-graphics.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
     paths:
+      - '.github/workflows/deploy-cursed-graphics.yml'
       - 'sites/cursed.graphics/**'
 
 jobs:
