Testing auto-deploy

--- a/sites/cursed.graphics/wrangler.toml
+++ b/sites/cursed.graphics/wrangler.toml
@@ -8,4 +8,4 @@ bucket_name = "cursed-graphics"
 preview_bucket_name = "cursed-graphics"
 
 [build]
-command = "cargo install worker-build && worker-build --release"
+command = "worker-build --release"
