--- a/sites/cursed.graphics/wrangler.toml
+++ b/sites/cursed.graphics/wrangler.toml
@@ -8,4 +8,5 @@ bucket_name = "cursed-graphics"
 preview_bucket_name = "cursed-graphics"
 
 [build]
+# Install with: cargo install worker-build
 command = "worker-build --release"
