--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "static/map-data"]
-	path = static/map-data
-	url = git@github.com:ewpratten/ewpratten-com-map-data.git
+# [submodule "static/map-data"]
+# 	path = static/map-data
+# 	url = git@github.com:ewpratten/ewpratten-com-map-data.git
