--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,6 @@ host: 0.0.0.0
 port: 4000
 livereload: true
 
-
 # URL
 baseurl: /
 url: https://ewpratten.com
@@ -22,6 +21,16 @@ kramdown:
 # Plugins
 plugins:
   - jekyll-feed
+
+# Per-collection settings
+collections_dir: _collections
+collections:
+  posts:
+    output: true
+    permalink: /blog/:title
+  photos:
+    output: true
+    permalink: /photography/:title
 
 # Exclusions
 exclude:
