--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,4 +25,13 @@
     },
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
     "html.format.unformattedContentDelimiter": "<!--noformat-->",
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/.jekyll-cache": true,
+    }
 }
