--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,16 +6,14 @@
         {
             "label": "Launch development webserver (ewpratten.com)",
             "type": "shell",
-            "command": "zola",
+            "command": "docker",
             "options": {
                 "cwd": "${workspaceFolder}"
             },
             "args": [
-                "serve",
-                "--drafts",
-                "--interface",
-                "0.0.0.0",
-                "--open"
+                "compose",
+                "up",
+                "--build"
             ],
             "problemMatcher": []
         }
