--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ kramdown:
 # Plugins
 plugins:
   - jekyll-feed
-  - jekyll-target-blank
+  # - jekyll-target-blank
 
 # Per-collection settings
 collections_dir: collections
