Better handling of the blog list on small screens

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,19 @@
             },
             "args": [
                 "compose",
+                "up"
+            ],
+            "problemMatcher": []
+        },
+        {
+            "label": "Launch development webserver (with build) (ewpratten.com)",
+            "type": "shell",
+            "command": "docker",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "args": [
+                "compose",
                 "up",
                 "--build"
             ],
